--- a/services/login.webmaker.org/package.json
+++ b/services/login.webmaker.org/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Webmaker Product Team <webmaker-staff@mozillafoundation.org>",
+  "author": "Webmaker Product Tem <webmaker-staff@mozillafoundation.org>",
   "name": "login.webmaker.org",
   "version": "1.5.23",
   "homepage": "https://github.com/mozilla/login.webmaker.org",
